--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mysql2": "^3.1.1",
-    "sequelize": "^6.28.0"
+    "mysql2": "^3.1.1"
   }
 }
